# tg-news-reposter-bot

./: .gitignore  README.md  main.py  pyproject.toml  test_process_news.py  words.json
src/newsreposter/: app.py
src/newsreposter/core/: argparse.py  config.py  logging.py  post.py  process_news.py
src/newsreposter/core/media_parsers/: __init__.py  fedsfm.py  interfax.py  mia.py  novayagazeta.py  ria.py  sledcom.py  tass.py
src/newsreposter/core/parsers/: __init__.py
src/newsreposter/core/parsers/post_parsers/: __init__.py  fsb.py  novayagazeta.py  ria.py  sledcom.py  tass.py
src/newsreposter/core/parsers/pre_parsers/: fedsfm.py  fsb.py  interfax.py  mia.py  novayagazeta.py  ria.py  sledcom.py  tass.py
src/newsreposter/core/post_parsers/: __init__.py  fedsfm.py  fsb.py  interfax.py  mia.py
src/newsreposter/services/: bot.py  news_checker.py  news_queue.py
src/newsreposter/services/parsers/: __init__.py  fedsfm.py  fsb.py  interfax.py  mia.py  novayagazeta.py  ria.py  sledcom.py  tass.py
tests/: test_newschecker.py
