[project]
name = "tg-news-reposter-bot"
version = "0.1.0"
description = "A script that reposts news with specified topics/vocabularies in a Telegram channel"
readme = "README.md"
authors = [
  {name = "Kopytov Ilya (@d1n0tf)", email = "ilushkaplyshka@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "beautifulsoup4>=4.14.2",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "playwright>=1.56.0",
    "pydantic-settings>=2.12.0",
    "pytest-asyncio>=1.3.0",
    "sentence-transformers>=5.1.2",
    "tzdata>=2025.2",
]
